TEST_PROGRAMS/typing_benchmarks/valid/switch.go
package main

func main() {
	var x = 1

	for i:=0;i<10;i++{
		println("hi")
			switch i {
			case 4: break;
			case 2: println("false")
			default: println("def")
			}
	}
	
}
